home page mobile responsive alignment fix

--- a/src/pages/Home/Home/Home.css
+++ b/src/pages/Home/Home/Home.css
@@ -58,7 +58,8 @@
 /*----------------------------------- Media Quary For Responsive Website -----------------------------------*/
 @media only screen and (max-width:688px) {
     .top-banner{
-        display: grid;
+        display: flex;
+        flex-direction: column;
         align-items: center;
         justify-items: center;
     }
